Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127609

qmlls: completion wrong for qualified imports

XMLWordPrintable

    • 66025b65b (dev), c391cd5f2 (6.8)

      It seems that qmlls does autocomplete types from qualified modules wrongly:

      import QtQuick as QQ
      QQ.Item {
          QQ.<autocomplete for Item> // will insert QQ.QQ.Item
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sami.shalayel Sami Shalayel
            sami.shalayel Sami Shalayel
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes