tests/auto/qmlls/utils/data/completions/attachedAndGroupedProperty.qml
@@ -9,4 +9,6 @@ Item {
     Text {
         font.f: ""
     }
+
+    property bool xxx: Component.a
 }
